Add licensing information, along with a link to the source code.

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -21,6 +21,7 @@ but instead of using a table to display the image, it uses javascript, and the h
 	</div>
 	<div id="status">
 			<form id="urlform" action="#">
+				<div id="description">
 				<h1>Dezoomify</h1>
 				<p id="description">
 					Enter the URL of a webpage containing a zoomify viewer.
@@ -28,6 +29,11 @@ but instead of using a table to display the image, it uses javascript, and the h
 					On Firefox, you will then be able to right-click on the image,
 					and choose "Save As" in order to save it as a PNG file on your computer.
 				</p>
+				<p id="licenseinfo">
+					This script is released under the <a href="http://www.gnu.org/licenses/gpl.html">GPL</a>.
+					<a href="http://github.com/lovasoa/dezoomify">See the source code</a>.
+				</p>
+				</div>
 
 				<p>
 				<input type='text' tabindex="10" id='url' placeholder="URL" />
