--- a/dezoomify.html
+++ b/dezoomify.html
@@ -53,6 +53,7 @@ but instead of using a table to display the image, it uses javascript, and the h
 
 <script type="text/javascript" src="zoommanager.js" ></script>
 <script type="text/javascript" src="natgal.js" ></script>
+<script type="text/javascript" src="seadragon.js" ></script>
 <script type="text/javascript" src="zoomify.js" ></script>
 
 <script type="text/javascript">
