--- a/dezoomify.html
+++ b/dezoomify.html
@@ -55,6 +55,7 @@ but instead of using a table to display the image, it uses javascript, and the h
 <script type="text/javascript" src="natgal.js" ></script>
 <script type="text/javascript" src="seadragon.js" ></script>
 <script type="text/javascript" src="zoomify.js" ></script>
+<script type="text/javascript" src="zoomify-pff.js" ></script>
 
 <script type="text/javascript">
 document.getElementById("urlform").onsubmit = function(evt) {
