--- a/dezoomify.html
+++ b/dezoomify.html
@@ -11,7 +11,7 @@ but instead of using a table to display the image, it uses javascript, and the h
     <meta charset="utf8" />
     <meta name="description" content="Grab images from a  webpage containing a Zoomify or ZoomTool (from the National Gallery of London) viewer and automatically stitches the images with javascript and the HTML5 <canvas>." />
 	<title>Dezoomify</title>
-	<link rel="icon" type="image/gif" href="loupe.gif" />
+	<link rel="icon" href="favicon.png" />
 	<link rel="stylesheet" media="screen" href="style.css" />
 </head>
 
@@ -22,7 +22,7 @@ but instead of using a table to display the image, it uses javascript, and the h
 	<div id="status">
 			<form id="urlform" action="#">
 				<div id="description">
-				<h1>Dezoomify</h1>
+				<h1>Dezoomify <img src="icon.svg" width="20" height="20"/></h1>
 				<p id="description">
 					Enter the URL of a webpage containing a zoomify viewer.
 					The image will be downloaded at maximal resolution. 
