Add a link to the bugtracker

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -48,6 +48,7 @@ but instead of using a table to display the image, it uses javascript, and the h
 		<div id="error"><p style='color:red;'>Error : Unable to extract informations from the given file !</p>
 		<p>Try to extract the zoomifyImagePath in the webpage containing the zoomify viewer on your own, and paste this path to the form on this page. Search 'zoomifyImagePath' in the real source code of the page (the one you can get with firebug in firefox, or the web inspector in Safari/Chrome.</p>
 		<p>Exemple of path : <code>http://images.famsf.org/Zoom/7822312331480020/</code></p>
+		<p>If you think this is an issue with dezoomify itself, you can <a href="https://github.com/lovasoa/dezoomify/issues/">report a bug on the bugtracker</a>.</p>
 		</div>
 	</div>
 
