Add support for topviewer
The only known site to use this is daguerreobase.org

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -61,6 +61,7 @@ but instead of using a table to display the image, it uses javascript, and the h
 <script type="text/javascript" src="zoomify.js" ></script>
 <script type="text/javascript" src="zoomify-pff.js" ></script>
 <script type="text/javascript" src="xlimage.js" ></script>
+<script type="text/javascript" src="topviewer.js" ></script>
 
 <script type="text/javascript">
 document.getElementById("urlform").onsubmit = function(evt) {
