--- a/dezoomify.html
+++ b/dezoomify.html
@@ -56,12 +56,12 @@ but instead of using a table to display the image, it uses javascript, and the h
 	</div>
 
 <script type="text/javascript" src="zoommanager.js" ></script>
-<script type="text/javascript" src="natgal.js" ></script>
-<script type="text/javascript" src="seadragon.js" ></script>
-<script type="text/javascript" src="zoomify.js" ></script>
-<script type="text/javascript" src="zoomify-pff.js" ></script>
-<script type="text/javascript" src="xlimage.js" ></script>
-<script type="text/javascript" src="topviewer.js" ></script>
+<script type="text/javascript" src="dezoomers/natgal.js" ></script>
+<script type="text/javascript" src="dezoomers/seadragon.js" ></script>
+<script type="text/javascript" src="dezoomers/zoomify.js" ></script>
+<script type="text/javascript" src="dezoomers/zoomify-pff.js" ></script>
+<script type="text/javascript" src="dezoomers/xlimage.js" ></script>
+<script type="text/javascript" src="dezoomers/topviewer.js" ></script>
 
 <script type="text/javascript">
 document.getElementById("urlform").onsubmit = function(evt) {
