Select dezoomer automatically
Adds an "automatic" dezoomer, that tries to discover which dezoomer
should be used, and dezoom the image without user intervention.

Fixes #32

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -56,9 +56,10 @@ but instead of using a table to display the image, it uses javascript, and the h
 	</div>
 
 <script type="text/javascript" src="zoommanager.js" ></script>
-<script type="text/javascript" src="dezoomers/natgal.js" ></script>
-<script type="text/javascript" src="dezoomers/seadragon.js" ></script>
+<script type="text/javascript" src="dezoomers/automatic.js" ></script>
 <script type="text/javascript" src="dezoomers/zoomify.js" ></script>
+<script type="text/javascript" src="dezoomers/seadragon.js" ></script>
+<script type="text/javascript" src="dezoomers/natgal.js" ></script>
 <script type="text/javascript" src="dezoomers/zoomify-pff.js" ></script>
 <script type="text/javascript" src="dezoomers/xlimage.js" ></script>
 <script type="text/javascript" src="dezoomers/topviewer.js" ></script>
