--- a/dezoomify.html
+++ b/dezoomify.html
@@ -63,6 +63,7 @@ but instead of using a table to display the image, it uses javascript, and the h
 <script type="text/javascript" src="dezoomers/zoomify-pff.js" ></script>
 <script type="text/javascript" src="dezoomers/xlimage.js" ></script>
 <script type="text/javascript" src="dezoomers/topviewer.js" ></script>
+<script type="text/javascript" src="dezoomers/artsy.js" ></script>
 
 <script type="text/javascript">
 document.getElementById("urlform").onsubmit = function(evt) {
