Improve display on mobiles

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -13,6 +13,7 @@ but instead of using a table to display the image, it uses javascript, and the h
 	<title>Dezoomify</title>
 	<link rel="icon" href="favicon.png" />
 	<link rel="stylesheet" media="screen" href="style.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
