Add support for krpano
Fixes #38

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -65,6 +65,7 @@ but instead of using a table to display the image, it uses javascript, and the h
 <script type="text/javascript" src="dezoomers/xlimage.js" ></script>
 <script type="text/javascript" src="dezoomers/topviewer.js" ></script>
 <script type="text/javascript" src="dezoomers/artsy.js" ></script>
+<script type="text/javascript" src="dezoomers/krpano.js" ></script>
 
 <script type="text/javascript">
 document.getElementById("urlform").onsubmit = function(evt) {
