Update main html

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -21,7 +21,8 @@
         <div id="description">
         <h1>Dezoomify <img src="icon.svg" width="20" height="20"/></h1>
         <p id="description">
-          Enter the URL of a webpage containing a <abbr title="A large image in which you can navigate inside a webpage.">zoomable image</abbr>.
+          Dezoomify allows you to download <abbr title="Large images in which you can navigate inside a webpage.">zoomable images</abbr>.
+          Enter the URL of such an image in the text field below.
           The image will be downloaded at maximal resolution.
           You can then right-click on the image,
           and choose "Save As" in order to save it as a PNG file on your computer.
@@ -53,7 +54,7 @@
         </noscript>
 
         <p>
-        <input type='text' tabindex="10" id='url' placeholder="URL" />
+        <input type='text' tabindex="10" id='url' placeholder="URL of the webpage containing your image" />
         <p id="dezoomers"></p>
         <input type='submit' tabindex="30" />
         </p>
@@ -68,7 +69,7 @@
       <p>Try to extract the zoomifyImagePath in the webpage containing the zoomify viewer on your own, and paste this path to the form on this page. Search 'zoomifyImagePath' in the real source code of the page (the one you can get with firebug in firefox, or the web inspector in Safari/Chrome.</p>
       <p>Exemple of path : <code>http://images.famsf.org/Zoom/7822312331480020/</code></p>
       </div>
-    <p>If you think this is an issue with dezoomify itself, you can <a href="https://github.com/lovasoa/dezoomify/issues/">report a bug on the bugtracker</a>.</p>
+    <p>You should read our <a href="https://github.com/lovasoa/dezoomify/wiki/Dezoomify-FAQ">FAQ</a>, and, if you think this is an issue with dezoomify itself, <a href="https://github.com/lovasoa/dezoomify/issues/">report a bug on the bugtracker</a>.</p>
     </div>
   </div>
 
