Fix typo in html

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -39,7 +39,7 @@
         <div id="browserwarning" class="error" hidden>
           <h2>Warning</h2>
           <p>Unfortunately, Internet Explorer doesn't support
-          the features used in zoomify. Please use a recent version of
+          the features used in dezoomify. Please use a recent version of
             <a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> or
             <a href="https://www.google.com/chrome/">Chrome</a>.</p>
         </div>
