Add a button to save the image once it has been downloaded

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -56,7 +56,7 @@
         <p>
         <input type='text' tabindex="10" id='url' placeholder="URL of the webpage containing your image" />
         <p id="dezoomers"></p>
-        <input type='submit' tabindex="30" />
+        <input type='submit' tabindex="30" class="button"/>
         </p>
       </form>
 
