Add a link to github

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -27,6 +27,7 @@
           You can then right-click on the image,
           and choose "Save As" in order to save it as a PNG file on your computer.
           If it doesn't work, read our <a href="https://github.com/lovasoa/dezoomify/wiki/Dezoomify-FAQ">FAQ</a>.
+          If you want more information, read our <a href="https://github.com/lovasoa/dezoomify#dezoomify">project page</a>.
         </p>
 
         <p id="licenseinfo">
