--- a/dezoomify.html
+++ b/dezoomify.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" media="screen" href="style.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Download zoomable images from websites using Zoomify, Deep Zoom, and other." />
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
 </head>
 
 <body>
