--- a/dezoomify.html
+++ b/dezoomify.html
@@ -84,6 +84,7 @@
 <script type="text/javascript" src="dezoomers/topviewer.js" ></script>
 <script type="text/javascript" src="dezoomers/artsy.js" ></script>
 <script type="text/javascript" src="dezoomers/krpano.js" ></script>
+<script type="text/javascript" src="dezoomers/microsculpture.js" ></script>
 
 <script type="text/javascript">
 document.getElementById("urlform").onsubmit = function(evt) {
