--- a/dezoomify.html
+++ b/dezoomify.html
@@ -78,7 +78,7 @@
 <script type="text/javascript" src="dezoomers/automatic.js" ></script>
 <script type="text/javascript" src="dezoomers/zoomify.js" ></script>
 <script type="text/javascript" src="dezoomers/seadragon.js" ></script>
-<script type="text/javascript" src="dezoomers/natgal.js" ></script>
+<script type="text/javascript" src="dezoomers/iipimage.js" ></script>
 <script type="text/javascript" src="dezoomers/zoomify-pff.js" ></script>
 <script type="text/javascript" src="dezoomers/xlimage.js" ></script>
 <script type="text/javascript" src="dezoomers/topviewer.js" ></script>
