Add a generic dezoomer

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -85,6 +85,7 @@
 <script type="text/javascript" src="dezoomers/artsy.js" ></script>
 <script type="text/javascript" src="dezoomers/krpano.js" ></script>
 <script type="text/javascript" src="dezoomers/microsculpture.js" ></script>
+<script type="text/javascript" src="dezoomers/generic.js" ></script>
 
 <script type="text/javascript">
 document.getElementById("urlform").onsubmit = function(evt) {
