--- a/dezoomify.html
+++ b/dezoomify.html
@@ -84,6 +84,7 @@
 <script type="text/javascript" src="dezoomers/topviewer.js" ></script>
 <script type="text/javascript" src="dezoomers/artsy.js" ></script>
 <script type="text/javascript" src="dezoomers/krpano.js" ></script>
+<script type="text/javascript" src="dezoomers/iiif.js" ></script>
 <script type="text/javascript" src="dezoomers/generic.js" ></script>
 
 <script type="text/javascript">
