Fix a bug with direct links to dezoomified images

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -98,7 +98,7 @@ document.getElementById("urlform").onsubmit = function(evt) {
 }
 
 // allow to set the URL to be dezoomed by setting the URL hash
-var startURL = window.location.hash.slice(1);
+var startURL = decodeURI(window.location.hash.slice(1));
 if (startURL) {
   document.getElementById("url").value = startURL;
 }
