Add support for FSI
Example: http://romandelarose.org/#read;Douce332.140r.tif
Fixes  #113

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -85,6 +85,7 @@
 <script type="text/javascript" src="dezoomers/artsy.js" ></script>
 <script type="text/javascript" src="dezoomers/krpano.js" ></script>
 <script type="text/javascript" src="dezoomers/iiif.js" ></script>
+<script type="text/javascript" src="dezoomers/fsi.js" ></script>
 <script type="text/javascript" src="dezoomers/tretiakov.js" ></script>
 <script type="text/javascript" src="dezoomers/generic.js" ></script>
 
