Fix HTML markup
"true" is not a valid value for a boolean attribute in HTML5

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -56,7 +56,7 @@
         </noscript>
 
         <p>
-        <input type='text' tabindex="10" id='url' placeholder="URL of the webpage containing your image" autofocus="true"/>
+        <input type='text' tabindex="10" id='url' placeholder="URL of the webpage containing your image" autofocus />
         <p id="dezoomers"></p>
         <input type='submit' tabindex="30" class="button"/>
       </form>
