W3 HTML markup conformance: icon alt text
According to the W3C: iconic images that are redundant
with text next to them or purely decorative should have alt="" instead

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -20,7 +20,7 @@
   <div id="status">
       <form id="urlform" action="#">
         <div id="description">
-        <h1>Dezoomify <img src="icon.svg" alt="Dezoomify loop & tiles icon" width="20" height="20"/></h1>
+        <h1>Dezoomify <img src="icon.svg" alt="" width="20" height="20"/></h1>
         <p>
           Dezoomify allows you to download <abbr title="Large images in which you can navigate inside a webpage.">zoomable images</abbr>.
           Enter the URL of such an image in the text field below.
