--- a/dezoomify.html
+++ b/dezoomify.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Security-Policy" content="script-src 'self'">
   <title>Dezoomify</title>
-  <link rel="icon" href="favicon.png" />
-  <link rel="stylesheet" media="screen" href="style.css" />
-  <meta name="description" content="Download zoomable images from websites using Zoomify, Deep Zoom, and other." />
+  <link rel="stylesheet" media="screen" href="style.css">
+  <meta name="application-name" content="Dezoomify">
+  <meta name="description" content="Download zoomable images from websites using Zoomify, Deep Zoom, and other.">
+  <meta property="og:image" content="http://ophir.alwaysdata.net/dezoomify/icon.svg">
+  <link rel="icon" href="favicon.png">
+  <link rel="author" href="https://github.com/lovasoa/">
+  <link rel="canonical" href="http://ophir.alwaysdata.net/dezoomify/dezoomify.html">
 </head>
 
 <body>
