--- a/dezoomify.html
+++ b/dezoomify.html
@@ -22,7 +22,7 @@
       Dezoomify will dynamically change it's size once the target image meta-information is loaded. -->
      <canvas id="rendering-canvas" width="0" height="0"></canvas>
   </div>
-  <div id="status">
+  <main id="status">
       <form id="urlform" action="#">
         <div id="description">
         <h1>Dezoomify <img src="icon.svg" alt="" width="20" height="20"/></h1>
@@ -77,7 +77,7 @@
       </div>
     <p>You should read our <a href="https://github.com/lovasoa/dezoomify/wiki/Dezoomify-FAQ">FAQ</a>, and, if you think this is an issue with dezoomify itself, <a href="https://github.com/lovasoa/dezoomify/issues/">report a bug on the bugtracker</a>.</p>
     </div>
-  </div>
+  </main>
 
 <script type="text/javascript" src="zoommanager.js" ></script>
 <script type="text/javascript" src="dezoomers/automatic.js" ></script>
