--- a/dezoomify.html
+++ b/dezoomify.html
@@ -20,51 +20,60 @@
   <div id="dezoomifiedImage">
     <!-- The tiles will be drawn on this canvas.
       Dezoomify will dynamically change it's size once the target image meta-information is loaded. -->
-     <canvas id="rendering-canvas" width="0" height="0"></canvas>
+    <canvas id="rendering-canvas" width="0" height="0"></canvas>
   </div>
   <main id="status">
-      <form id="urlform" action="#">
-        <div id="description">
-        <h1>Dezoomify <img src="icon.svg" alt="" width="20" height="20"/></h1>
-        <p>
-          Dezoomify allows you to download <abbr title="Large images in which you can navigate inside a webpage.">zoomable images</abbr>.
-          Enter the URL of such an image in the text field below.
-          The image will be downloaded at maximal resolution.
-          You can then right-click on the image,
-          and choose "Save As" in order to save it as a PNG file on your computer.
-          If it doesn't work, read our <a href="https://github.com/lovasoa/dezoomify/wiki/Dezoomify-FAQ">FAQ</a>.
-          If you want more information, read our <a href="https://github.com/lovasoa/dezoomify#dezoomify">project page</a>.
-        </p>
+    <form id="urlform" action="#">
+      <div id="description">
+      <h1>Dezoomify <img src="icon.svg" alt="" width="20" height="20"/></h1>
+      <p>
+        Dezoomify allows you to download
+        <abbr title="Large images in which you can navigate inside a webpage.">
+          zoomable images
+        </abbr>.
+        Enter the URL of such an image in the text field below.
+        The image will be downloaded at maximal resolution.
+        You can then right-click on the image,
+        and choose "Save As" in order to save it as a PNG file on your computer.
+        If it doesn't work, read our
+        <a href="https://github.com/lovasoa/dezoomify/wiki/Dezoomify-FAQ">FAQ</a>.
+        If you want more information, read our
+        <a href="https://github.com/lovasoa/dezoomify#dezoomify">project page</a>.
+      </p>
 
-        <p id="licenseinfo">
-          This script is released under the <a href="http://www.gnu.org/licenses/gpl.html">GPL</a>.
-          <a href="http://github.com/lovasoa/dezoomify">See the source code</a>.
-        </p>
+      <p id="licenseinfo">
+        This script is released under the <a href="http://www.gnu.org/licenses/gpl.html">GPL</a>.
+        <a href="http://github.com/lovasoa/dezoomify">See the source code</a>.
+      </p>
+      </div>
+
+      <!--[if lte IE 9]>
+      <div id="browserwarning" class="error" hidden>
+        <h2>Warning</h2>
+        <p>Unfortunately, Internet Explorer doesn't support
+        the features used in dezoomify. Please use a recent version of
+          <a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> or
+          <a href="https://www.google.com/chrome/">Chrome</a>.</p>
+      </div>
+      <![endif]-->
+
+      <noscript>
+        <div class="error">
+          Dezoomify uses javascript to do it's magic.
+          But javascript seems to be disabled on your browser.
+          Here are the
+          <a href="http://www.enable-javascript.com/">
+            instructions how to enable JavaScript in your web browser
+          </a>.
         </div>
+      </noscript>
 
-        <!--[if lte IE 9]>
-        <div id="browserwarning" class="error" hidden>
-          <h2>Warning</h2>
-          <p>Unfortunately, Internet Explorer doesn't support
-          the features used in dezoomify. Please use a recent version of
-            <a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> or
-            <a href="https://www.google.com/chrome/">Chrome</a>.</p>
-        </div>
-        <![endif]-->
-
-        <noscript>
-          <div class="error">
-            Dezoomify uses javascript to do it's magic.
-            But javascript seems to be disabled on your browser.
-            Here are the <a href="http://www.enable-javascript.com/">instructions how to enable JavaScript in your web browser</a>.
-          </div>
-        </noscript>
-
-        <p>
-        <input type='text' tabindex="10" id='url' placeholder="URL of the webpage containing your image" autofocus />
-        <p id="dezoomers"></p>
-        <input type='submit' tabindex="30" class="button"/>
-      </form>
+      <p>
+      <input type='text' tabindex="10" id='url'
+             placeholder="URL of the webpage containing your image" autofocus>
+      <p id="dezoomers"></p>
+      <input type='submit' tabindex="30" class="button">
+    </form>
 
     <p id="percent"></p>
     <p id="progressbar"></p>
@@ -72,10 +81,25 @@
     <div id="error" class="error" hidden>
       <h3>Error !</h3>
       <div id="errormsg">
-      <p>Try to extract the zoomifyImagePath in the webpage containing the zoomify viewer on your own, and paste this path to the form on this page. Search 'zoomifyImagePath' in the real source code of the page (the one you can get with firebug in firefox, or the web inspector in Safari/Chrome.</p>
-      <p>Exemple of path : <code>http://images.famsf.org/Zoom/7822312331480020/</code></p>
+        <p>
+          Try to extract the zoomifyImagePath in the webpage containing
+          the zoomify viewer on your own, and paste this path to the form
+          on this page.
+          Search 'zoomifyImagePath' in the source code of the page
+          (the one you can get with the DOM inspector of your browser).
+        </p>
+        <p>Exemple of path :
+          <code>http://images.famsf.org/Zoom/7822312331480020/</code>
+        </p>
       </div>
-    <p>You should read our <a href="https://github.com/lovasoa/dezoomify/wiki/Dezoomify-FAQ">FAQ</a>, and, if you think this is an issue with dezoomify itself, <a href="https://github.com/lovasoa/dezoomify/issues/">report a bug on the bugtracker</a>.</p>
+      <p>
+        You should read our
+        <a href="https://github.com/lovasoa/dezoomify/wiki/Dezoomify-FAQ">FAQ</a>,
+        and, if you think this is an issue with dezoomify itself,
+        <a href="https://github.com/lovasoa/dezoomify/issues/">
+          report a bug on the bugtracker
+        </a>.
+      </p>
     </div>
   </main>
 
