--- a/dezoomify.html
+++ b/dezoomify.html
@@ -69,7 +69,7 @@
       </noscript>
 
       <p>
-      <input type='text' tabindex="10" id='url'
+      <input type='url' tabindex="10" id='url'
              placeholder="URL of the webpage containing your image" autofocus>
       <p id="dezoomers"></p>
       <input type='submit' tabindex="30" class="button">
