--- a/dezoomify.html
+++ b/dezoomify.html
@@ -27,11 +27,12 @@
       <div id="description">
         <h1>Dezoomify <img src="icon.svg" alt="" width="20" height="20"/></h1>
         <p>
-          Dezoomify allows you to download
+          <strong>Dezoomify</strong> allows you to download
           <abbr title="Large images in which you can navigate inside a webpage.">
-            zoomable images
-          </abbr>.
-          Enter the URL of such an image in the text field below.
+          zoomable images</abbr>.
+          Enter the
+          <abbr title="Uniform Resource Locator, the address of a webpage">URL</abbr>
+          of such an image in the text field below.
           The image will be downloaded at maximal resolution.
           You can then right-click on the image,
           and choose "Save As" in order to save it as a PNG file on your computer.
@@ -58,27 +59,30 @@
       <![endif]-->
 
       <noscript>
-        <div class="error">
+        <aside class="error" role="alert">
           Dezoomify uses javascript to do it's magic.
           But javascript seems to be disabled on your browser.
           Here are the
           <a href="http://www.enable-javascript.com/">
             instructions how to enable JavaScript in your web browser
           </a>.
-        </div>
+        </aside>
       </noscript>
 
       <p>
-      <input type='url' tabindex="10" id='url'
+        <input type='url' tabindex="10" id='url'
+             title="Enter the URL of the webpage containing your zoomable image"
              placeholder="URL of the webpage containing your image" autofocus>
+      </p>
       <p id="dezoomers"></p>
       <input type='submit' tabindex="30" class="button">
     </form>
 
-    <p id="percent"></p>
-    <p id="progressbar"></p>
+    <p id="percent" role="status"></p>
+    <p id="progressbar" role="progressbar"
+       aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></p>
 
-    <div id="error" class="error" hidden>
+    <aside id="error" class="error" role="alert" hidden>
       <h3>Error !</h3>
       <div id="errormsg">
         <p>
@@ -100,7 +104,7 @@
           report a bug on the bugtracker
         </a>.
       </p>
-    </div>
+    </aside>
   </main>
 
 <script type="text/javascript" src="zoommanager.js" ></script>
