--- a/dezoomify.html
+++ b/dezoomify.html
@@ -83,7 +83,7 @@
        aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></p>
 
     <aside id="error" class="error" role="alert" hidden>
-      <h3>Error !</h3>
+      <h3><img id="error-img" src="//:0" alt="" width="30" height="30"> Error</h3>
       <div id="errormsg">
         <p>
           Try to extract the zoomifyImagePath in the webpage containing
