--- a/dezoomify.html
+++ b/dezoomify.html
@@ -59,14 +59,14 @@
       <![endif]-->
 
       <noscript>
-        <aside class="error" role="alert">
+        <div class="error" role="alert">
           Dezoomify uses javascript to do it's magic.
           But javascript seems to be disabled on your browser.
           Here are the
           <a href="http://www.enable-javascript.com/">
             instructions how to enable JavaScript in your web browser
           </a>.
-        </aside>
+        </div>
       </noscript>
 
       <p>
@@ -82,8 +82,11 @@
     <p id="progressbar" role="progressbar"
        aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></p>
 
-    <aside id="error" class="error" role="alert" hidden>
-      <h3><img id="error-img" src="//:0" alt="" width="30" height="30"> Error</h3>
+    <div id="error" class="error" role="alert" hidden>
+      <h3>
+        <img id="error-img" src="data:image/bmp;base64,Qk0eAAAAAAAAABoAAAAMAAAAAQABAAEAGAAAAP8A" alt="" width="30" height="30">
+        Error
+      </h3>
       <div id="errormsg">
         <p>
           Try to extract the zoomifyImagePath in the webpage containing
@@ -104,7 +107,7 @@
           report a bug on the bugtracker
         </a>.
       </p>
-    </aside>
+    </div>
   </main>
 
 <script type="text/javascript" src="zoommanager.js" ></script>
