VLS: Implement dezoomer

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -123,6 +123,7 @@
 <script type="text/javascript" src="dezoomers/iiif.js" ></script>
 <script type="text/javascript" src="dezoomers/fsi.js" ></script>
 <script type="text/javascript" src="dezoomers/tretiakov.js" ></script>
+<script type="text/javascript" src="dezoomers/vls.js" ></script>
 <script type="text/javascript" src="dezoomers/generic.js" ></script>
 <script type="text/javascript" src="browser-init.js"></script>
 
