Add a new dezoomer: micrio for vangoghmuseum.nl
Closes #309

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -122,6 +122,7 @@
 <script type="text/javascript" src="dezoomers/iiif.js" ></script>
 <script type="text/javascript" src="dezoomers/fsi.js" ></script>
 <script type="text/javascript" src="dezoomers/vls.js" ></script>
+<script type="text/javascript" src="dezoomers/micrio.js" ></script>
 <script type="module" src="dezoomers/google-arts-culture.js" ></script>
 <script type="text/javascript" src="dezoomers/generic.js" ></script>
 <script type="text/javascript" src="browser-init.js"></script>
