Add a message about the new dezoomify extension

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -95,7 +95,7 @@
         </p>
         <p>
           You can try to install the
-          <a id="extension-link"
+          <a class="extension-link"
             href="https://github.com/lovasoa/dezoomify-extension/blob/master/README.md#dezoomify-extension">
             <b>dezoomify browser extension</b>,
           </a>
@@ -143,6 +143,12 @@
           <code>http://images.famsf.org/Zoom/7822312331480020/</code>
         </p>
       </div>
+    </div>
+    <div id="extension-ad">
+      <b>New !</b> There is now a <a class="extension-link"
+        href="https://github.com/lovasoa/dezoomify-extension/blob/master/README.md#dezoomify-extension">browser
+        extension</a> for dezoomify.
+      It can automatically find the address of zoomable images on the webpages you visit.
     </div>
   </main>
 
