Improve help text

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -105,10 +105,14 @@
             If that does not help, then you should read our
             <a href="https://github.com/lovasoa/dezoomify/wiki/Dezoomify-FAQ">Frequently Asked Questions</a>.
           </p>
+          <p>
+            If your image is extremely large and it does not show in your browser,
+            see our <a href='https://github.com/lovasoa/dezoomify/wiki/Very-large-images'>advices for large images</a>.
+          </p>
 
           <p>
-            Dezoomify also has a github bug tracker, where you can interact with other other users
-            as well as with me, the developer :
+            Dezoomify also has a github bug tracker, where you can interact with other users
+            as well as with me, the developer, if you create a free github account :
             <ul>
               <li>
                 <a href="https://github.com/lovasoa/dezoomify/issues?q=">search for issues similar to yours</a>:
@@ -127,7 +131,7 @@
                 issues.
               </li>
             </ul>
-            Please be polite, and to explain your issue in details in english if you decide to write something on the
+            Please be polite, and try to explain your issue in details in english if you decide to write something on the
             bug tracker.
           </p>
       </div>
@@ -145,7 +149,7 @@
       </div>
     </div>
     <div id="extension-ad">
-      <b>New !</b> There is now a <a class="extension-link"
+      <b>New version !</b> There is a <a class="extension-link"
         href="https://github.com/lovasoa/dezoomify-extension/blob/master/README.md#dezoomify-extension">browser
         extension</a> for dezoomify.
       It can automatically find the address of zoomable images on the webpages you visit.
