change button text

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -76,7 +76,7 @@
           placeholder="URL of the webpage containing your image" autofocus>
       </p>
       <p id="dezoomers"></p>
-      <input type='submit' tabindex="30" class="button">
+      <input type='submit' tabindex="30" class="button" value="Dezoomify !" title="Click to start downloading the image" >
     </form>
 
     <p id="percent" role="status"></p>
