Change the canonical URL to dezoomify.ophir.dev

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -12,9 +12,9 @@
   <meta name="description" content="Download zoomable images from websites using Zoomify, Deep Zoom, and other.">
   <link rel="icon" href="favicon.png">
   <link rel="author" href="https://github.com/lovasoa/">
-  <link rel="canonical" href="https://ophir.alwaysdata.net/dezoomify/dezoomify.html">
-  <meta property="og:url" content="https://ophir.alwaysdata.net/dezoomify/dezoomify.html" />
-  <meta property="og:image" content="https://ophir.alwaysdata.net/dezoomify/cover.png" />
+  <link rel="canonical" href="https://dezoomify.ophir.dev/dezoomify/dezoomify.html">
+  <meta property="og:url" content="https://dezoomify.ophir.dev/dezoomify/dezoomify.html" />
+  <meta property="og:image" content="https://dezoomify.ophir.dev/dezoomify/cover.png" />
 </head>
 
 <body>
