More helpful debug messages

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -95,45 +95,44 @@
         </p>
         <p>
           You can try to install the
-          <a class="extension-link"
-            href="https://github.com/lovasoa/dezoomify-extension/blob/master/README.md#dezoomify-extension">
-            <b>dezoomify browser extension</b>,
-          </a>
+          <a class="extension-link" href="https://lovasoa.github.io/dezoomify-extension/">
+            <b>dezoomify browser extension</b></a>,
           that can find the address of dezoomable images automatically
           on the pages you visit.
-          <p>
-            If that does not help, then you should read our
-            <a href="https://github.com/lovasoa/dezoomify/wiki/Dezoomify-FAQ">Frequently Asked Questions</a>.
-          </p>
-          <p>
-            If your image is extremely large and it does not show in your browser,
-            see our <a href='https://github.com/lovasoa/dezoomify/wiki/Very-large-images'>advices for large images</a>.
-          </p>
+        <p>
+          If that does not help, then you should read our
+          <a href="https://github.com/lovasoa/dezoomify/wiki/Dezoomify-FAQ">Frequently Asked Questions</a>.
+        </p>
+        <p>
+          If your image is extremely large and it does not show in your browser,
+          see our <a href='https://github.com/lovasoa/dezoomify/wiki/Very-large-images'>advices for large images</a>.
+        </p>
 
-          <p>
-            Dezoomify also has a github bug tracker, where you can interact with other users
-            as well as with me, the developer, if you create a free github account :
-            <ul>
-              <li>
-                <a href="https://github.com/lovasoa/dezoomify/issues?q=">search for issues similar to yours</a>:
-                maybe someone already managed to download images from your website and explained how.
-              </li>
-              <li>
-                <a href="https://github.com/lovasoa/dezoomify/issues/new?template=1_bug_report.md">report a bug</a>
-                if you think this is an issue with dezoomify itself. In that case, make sure to include the error text
-                below.
-              </li>
-              <li>
-                <a href="https://github.com/lovasoa/dezoomify/issues/new?template=0_new-site-support.md">ask me to add
-                  support for a site</a>:
-                I do not have a lot of time to allocate to dezoomify, but sometimes, I add support for new websites.
-                You can also <a href="https://github.com/sponsors/lovasoa">sponsor me</a> to spend time on solving your
-                issues.
-              </li>
-            </ul>
-            Please be polite, and try to explain your issue in details in english if you decide to write something on the
-            bug tracker.
-          </p>
+        <p>
+          Dezoomify also has a github bug tracker, where you can interact with other users
+          as well as with me, the developer, if you create a free github account :
+        <ul>
+          <li>
+            <a href="https://github.com/lovasoa/dezoomify/issues?q=" id="gh-search">search for issues similar to
+              yours</a>:
+            maybe someone already managed to download images from your website and explained how.
+          </li>
+          <li>
+            <a href="https://github.com/lovasoa/dezoomify/issues/new?template=1_bug_report.md">report a bug</a>
+            if you think this is an issue with dezoomify itself.
+            Use this link only if the image is in a format that is supported by dezoomify, yet it doesn't open
+            correctly. I try to fix bugs in dezoomify in a timely manner.
+          </li>
+          <li>
+            <a href="https://github.com/lovasoa/dezoomify/issues/new" id="gh-open-issue">ask for support with this
+              particular site</a>:
+            I do not have a lot of time to allocate to dezoomify, but sometimes, I add support for new websites.
+            You can also <a href="https://ophir.dev/">contact me</a> if you want paid personalized support.
+          </li>
+        </ul>
+        If you decide to write something on the bug tracker, then please
+        be polite, try to explain your issue in details in english, and include the technical details below.
+        </p>
       </div>
       <div id="errormsg">
         <p>
