Update link to dezoomify-rs

--- a/dezoomify.html
+++ b/dezoomify.html
@@ -26,7 +26,7 @@
     <a href="https://lovasoa.github.io/dezoomify-extension/"
       title="Dezoomify-extension is a browser addon that finds zoomable images in the pages you browse. It is useful when dezoomify itself does not find the image in the URL you give it.">
       dezoomify-extension</a>
-    <a href="https://lovasoa.github.io/dezoomify-rs/"
+    <a href="https://dezoomify-rs.ophir.dev/"
       title="Dezoomify-rs is a desktop application for Windows, MacOS and Linux that can download images that are too large for dezoomify to handle, and images on servers that try to block access from dezoomify.">dezoomify-rs</a>
     <a href="https://github.com/lovasoa/dezoomify/wiki" title="The dezoomify wiki">Help</a>
   </nav>
