--- a/dezoomify.html
+++ b/dezoomify.html
@@ -189,6 +189,7 @@
   <script type="module" src="dezoomers/arts-culture.js"></script>
   <script type="module" src="dezoomers/hungaricana.js"></script>
   <script type="module" src="dezoomers/mnesys.js"></script>
+  <script type="module" src="dezoomers/wmts.js"></script>
   <script type="text/javascript" src="dezoomers/generic.js"></script>
   <script type="text/javascript" src="browser-init.js"></script>
 
