include hash parameters in redirect

--- a/404.html
+++ b/404.html
@@ -1,5 +1,8 @@
 <head>
-  <meta http-equiv="refresh" content="0; URL=https://dezoomify.ophir.dev" />
+  <meta http-equiv="refresh" content="1; URL=https://dezoomify.ophir.dev" />
+  <script>
+    document.location = "https://dezoomify.ophir.dev" + document.location.hash;
+  </script>
 </head>
 <body>
 	<p>This page does not exist, redirecting to <a href="/">the home page</a>.</p>
