--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <meta name="description" content="Download zoomable images from websites using Zoomify, Deep Zoom, and other.">
   <link rel="icon" href="favicon.png">
   <link rel="author" href="https://github.com/lovasoa/">
-  <link rel="canonical" href="https://dezoomify.ophir.dev/dezoomify/dezoomify.html">
-  <meta property="og:url" content="https://dezoomify.ophir.dev/dezoomify/dezoomify.html" />
-  <meta property="og:image" content="https://dezoomify.ophir.dev/dezoomify/cover.png" />
+  <link rel="canonical" href="https://dezoomify.ophir.dev/">
+  <meta property="og:url" content="https://dezoomify.ophir.dev/" />
+  <meta property="og:image" content="https://dezoomify.ophir.dev/cover.png" />
   <meta name="referrer" content="same-origin">
 </head>
 
